--- a/app/javascript/components/Task/task.module.scss
+++ b/app/javascript/components/Task/task.module.scss
@@ -143,6 +143,8 @@
     background-color: transparent;
     border: none;
     outline: none;
+    max-width: 6rem;
+    text-overflow: ellipsis;
   }
 }
 
